--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 
-        <div class="scroll py-1 mb-2">
+        <div class="nav-scroll py-1 mb-2">
           <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
@@ -219,11 +219,11 @@
                 <li><a href="#">Facebook</a></li>
               </ol>
             </div>
-          </aside><!-- /.blog-sidebar -->
+          </aside>>
   
-        </div><!-- /.row -->
+        </div>
   
-      </content><!-- /.container -->
+      </content>
   
       <footer class="last">
         <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
