--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
             </div>
           </div>
         </header>
-  
-
-
-
-
-        <div class="nav-scroll py-1 mb-2">
+        <div class="nav-scroller py-1 mb-2">
           <nav class="nav d-flex justify-content-between">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
@@ -53,11 +48,6 @@
             <a class="p-2 text-muted" href="#">Travel</a>
           </nav>
         </div>
-
-
-
-
-
   
         <div class=" p-3 p-md-5 text-white rounded bg-dark">
           <div class="col-md-6 px-0">
