--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             </div>
           </div>
         </header>
-        <div class="nav-scroller py-1 mb-2">
-          <nav class="nav d-flex justify-content-between">
+        
+        <div class="nav-scroller  py-1 mb-2">
+          <nav class=" d-flex justify-content-between d-flex flex-nowrap  pb-2 overflow-auto">
             <a class="p-2 text-muted" href="#">World</a>
             <a class="p-2 text-muted" href="#">U.S.</a>
             <a class="p-2 text-muted" href="#">Technology</a>
@@ -48,7 +49,7 @@
             <a class="p-2 text-muted" href="#">Travel</a>
           </nav>
         </div>
-  
+      
         <div class=" p-3 p-md-5 text-white rounded bg-dark">
           <div class="col-md-6 px-0">
             <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
@@ -170,7 +171,7 @@
               <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
             </div>
   
-            <nav class="space">
+            <nav class="mb-4 rounded">
               <a class="btn btn-outline-primary" href="#">Older</a>
               <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
             </nav>
@@ -209,7 +210,7 @@
                 <li><a href="#">Facebook</a></li>
               </ol>
             </div>
-          </aside>>
+          </aside>
   
         </div>
   
